[project]
name = "lines_pythons"
version = "0.0.1"
authors = [
  { name="Howard Jeong", email="1lines.maker@onelines.org" },
]
description = "Lines Python Library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/keepinmindsh/lines_python_library"
"Bug Tracker" = "https://github.com/keepinmindsh/lines_python_library/issues"